[package]
name = "typing_racer_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = { version = "0.8", features = ["state"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["cors"] }
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json"] }
regex = "1.10.3"
rand = "0.8.5"
strum = "0.26.3"
strum_macros = "0.26.4"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }